[gd_scene load_steps=10 format=3 uid="uid://dju55aqrgmmbs"]

[ext_resource type="Script" path="res://Scenes/Player/Attacks/chain_attack.gd" id="1_40rnm"]
[ext_resource type="Texture2D" uid="uid://dsbjo4n82s2mn" path="res://Assets/Player/Attacks/Chain Spritesheet.png" id="1_n7ccg"]
[ext_resource type="AudioStream" uid="uid://b63xw7oispmi2" path="res://Assets/Player/Attacks/chain_01.ogg" id="3_hy5ql"]
[ext_resource type="AudioStream" uid="uid://bmwao5a7vnvto" path="res://Assets/Player/Attacks/chain_02.ogg" id="4_nne8g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4kmg8"]
size = Vector2(68, 47)

[sub_resource type="Animation" id="Animation_3jd48"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ChainSFX:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-16.0]
}

[sub_resource type="Animation" id="Animation_c0av1"]
resource_name = "swing"
length = 0.575
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ChainSFX:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-16.0, -16.0, -24.0, -32.0, -50.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h810b"]
_data = {
"RESET": SubResource("Animation_3jd48"),
"swing": SubResource("Animation_c0av1")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_57ou5"]
streams_count = 2
random_pitch = 1.12
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("3_hy5ql")
stream_0/weight = 1.0
stream_1/stream = ExtResource("4_nne8g")
stream_1/weight = 1.0

[node name="ChainAttack" type="Area2D" groups=["player_attacks"]]
script = ExtResource("1_40rnm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 11.5)
shape = SubResource("RectangleShape2D_4kmg8")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_n7ccg")
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
speed_scale = 1.5
libraries = {
"": SubResource("AnimationLibrary_h810b")
}

[node name="ChainSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_57ou5")
volume_db = -16.0
pitch_scale = 0.75

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
